--- a/css/media.css
+++ b/css/media.css
@@ -5,3 +5,10 @@
     margin-left: auto;
     margin-right: auto;
 }
+.spotify-responsive{
+    max-width: 400px;
+    width: 100%;
+    margin: auto;
+    border-radius: 12px;
+    overflow: hidden;
+}
